RESOLVED FIXED 242296
[GStreamer][VideoCapture] Fix video/x-raw mime-type format check
https://bugs.webkit.org/show_bug.cgi?id=242296
Summary [GStreamer][VideoCapture] Fix video/x-raw mime-type format check
James Hilliard
Reported 2022-07-03 11:26:35 PDT
Should use gst_structure_has_field not gst_structure_has_name for this check.
Attachments
James Hilliard
Comment 1 2022-07-03 11:28:47 PDT
EWS
Comment 2 2022-07-03 11:47:55 PDT
Committed 252104@main (f05c325263ce): <https://commits.webkit.org/252104@main> Reviewed commits have been landed. Closing PR #2041 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.