[GStreamer][VideoCapture] Fix video/x-raw mime-type format check https://bugs.webkit.org/show_bug.cgi?id=242296

Reviewed by Philippe Normand.

Should use gst_structure_has_field not gst_structure_has_name for this
check.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerVideoCapturer.cpp:
(WebCore::GStreamerVideoCapturer::reconfigure):

Canonical link: https://commits.webkit.org/252104@main